# checkarg

./: .clang-format  .travis.yml  COPYING  QUICKSTART.asciidoc  README.md  TODO.md
bash/: Makefile  checkarg.sh
bash/tests/: run_tests.sh  test01.bpt  test01.sh  test01_help.out  test02.bpt  test02.sh  test02_help.out  test03.bpt  test03.sh  test04.bpt  test04.sh  test05.bpt  test05.sh  test06.bpt  test06.sh
c/: .ccls  Makefile  README.md  meson.build  meson_options.txt
c-glib2/: Makefile
c-glib2/src/: checkarg.c  checkarg.h
c/data/: FindCheckArg.cmake
c/src/: checkarg.c  checkarg.h  checkarg_private.h
c/tests/: 01_constructors.cpp  02_basic_parsing.cpp  03_setters.cpp  04_positional_args.cpp  05_non_value.cpp  06_value.cpp  07_grouped_shorts.cpp  08_value_names.cpp  09_reuse.cpp  meson.build  run_tests.sh  test.hpp  test01.bpt  test02.bpt  test02.c  test03.bpt  test03.c  test03.out  test04.bpt  test04.c  test05.bpt  test05.c  test_args.c  test_driver.cpp
cpp/: .ccls  .clang-format  Makefile  README.md  meson.build  meson_options.txt
cpp/arch/: PKGBUILD  PKGBUILD-git
cpp/data/: FindCheckArg++.cmake  checkarg++.pc  checkarg.pc
cpp/doc/: Doxyfile
cpp/src/: bpstd.cpp  bpstd.hpp  checkarg++.cpp  checkarg++.hpp  checkarg.cpp  checkarg.hpp  checkarg_private.hpp  checkargpp.cpp  checkargpp.hpp  checkargpp_private.hpp
cpp/test/: run_test.sh  test_args
cpp/tests/: 01_constructors.cpp  02_basic_parsing.cpp  03_setters.cpp  04_positional_args.cpp  05_non_value.cpp  06_value.cpp  07_grouped_shorts.cpp  08_value_names.cpp  09_reuse.cpp  meson.build  run_tests.sh  test.hpp  test01.bpt  test01_help.out  test02.bpt  test02.cpp  test02_help.out  test03.bpt  test03.cpp  test04.bpt  test04.cpp  test05.bpt  test05.cpp  test_args.cpp
java/: CheckArg.java
rust/: Cargo.toml
rust/src/: checkarg.rs  lib.rs  main.rs  opt.rs  rc.rs  value_type.rs
rust/tests/: 01_constructors.rs  02_basic_parsing.rs  03_setters.rs  04_positional_args.rs  05_non_value.rs  06_value.rs  07_grouped_shorts.rs  08_value_names.rs  09_reuse.rs
